--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ importlib-metadata==4.11.3
 itsdangerous==2.1.2
 Jinja2==3.1.1
 MarkupSafe==2.1.1
+Pillow==9.1.0
 pycparser==2.21
 six==1.16.0
 SQLAlchemy==1.4.36
